examples/test/testpolicy4046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4046
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key1: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value40
          key10: value18
          key37: value46
      podSelector:
        matchLabels:
          key21: value49
          key3: value21
